logs/desoptpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DesOptPy'...
Compiling './lib/python3.5/site-packages/DesOptPy/CustomAlgs.py'...
***   File "./lib/python3.5/site-packages/DesOptPy/CustomAlgs.py", line 76
    print xNext
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/DesOptPy/Doc'...
Compiling './lib/python3.5/site-packages/DesOptPy/MainDesOpt.py'...
***   File "./lib/python3.5/site-packages/DesOptPy/MainDesOpt.py", line 744
    print "CMA-ES == not fully implemented in this framework"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DesOptPy/OptHis2HTML.py'...
***   File "./lib/python3.5/site-packages/DesOptPy/OptHis2HTML.py", line 348
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DesOptPy/OptResultReport.py'...
***   File "./lib/python3.5/site-packages/DesOptPy/OptResultReport.py", line 220
    print '# --------------  DIAGRAM GENERATION PROGRESS:  -------------- #\n'
                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DesOptPy/OptSensParaFD.py'...
***   File "./lib/python3.5/site-packages/DesOptPy/OptSensParaFD.py", line 95
    print 'Check the environmental variables! There is something wrong here! No job has been submitted!'
                                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/DesOptPy/ResultReportFiles'...
Listing './lib/python3.5/site-packages/DesOptPy/StatusReportFiles'...
Listing './lib/python3.5/site-packages/DesOptPy-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
